# JDA-software

./: .gitignore  README.md  build.py  pyproject.toml  setup.py
src/: main.py
src/bike_sharing/: __init__.py  pipeline.py
src/bike_sharing_software.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/doc/: modules.rst
src/doc/source/: README.md  conf.py  index.rst  part2.rst  reference.rst
src/jda/: preprocessing.py  randomforest.py
src/jda/tools/: __init__.py  tools.py
src/jda_software.egg-info/: PKG-INFO
tests/: test_jda_software.py  test_preprocessing.py  test_randomforest.py
utils/: Package Test.ipynb
